--- a/styles/global.css
+++ b/styles/global.css
@@ -2,52 +2,61 @@
 
 @font-face {
     font-family: 'MojangFont';
-    src: url('../assets/fonts/Minecraft.ttf');
+    src: url('../assets/fonts/minecraftten.ttf');
 }
 
 :root {
-    --primary-color: #4CAF50;
-    --secondary-color: #2196F3;
-    --minecraft-brown: #8B4513;
-    --minecraft-green: #228B22;
-    --form-background: #F5DEB3;
-    --form-border: #D2691E;
+    --color-bg-main: #242323;
+    --color-bg-nav: #ffffff;
+    --color-accent: #4CAF50;
+    --color-accent-bd: #228B22;
+    --color-red: #FE2C16;
+
+    --color-blue: #2196F3;
+    --color-brown: #8B4513;
+    --color-cream: #F5DEB3;
+    --color-offwhite: #F2E3CA;
+    --color-orange: #D2691E;
 }
 
-
-* {
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* outline: 1px solid red; */
 }
 
 body {
-    font-family: 'Inter', sans-serif;
-    line-height: 1.6;
-    background-color: var(--background-color);
-    color: var(--text-color);
+    font-family: 'Inter';
+    min-width: 700px;
 }
 
 .wrapper {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+    background-color: var(--color-offwhite);
 }
 
-.wrapper h1 {
-    font-family: 'MojangFont', sans-serif;
-    color: red;
-    text-align: center;
-    margin-bottom: 20px;
+a {
+    color: white;
 }
 
-/* Navigation Styles (Previous CSS) */
+a:focus,
+a:hover {
+    color: var(--color-red);
+}
+
 nav ul {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     list-style: none;
-    background-color: var(--primary-color);
-    padding: 10px;
+    background-color: var(--color-bg-main);
+    padding: 16px;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    z-index: 9999999;
 }
 
 nav ul li {
@@ -57,14 +66,91 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: white;
-    font-weight: bold;
     transition: all 0.3s ease;
-    position: relative;
 }
 
 nav ul li a.active {
-    color: var(--active-nav-color);
+    color: var(--color-red);
     transform: scale(1.1);
+}
+
+.nav-link {
+    font-weight: bold;
+    font-size: 0.8rem;
+}
+
+.nav-link:hover {
+    color: var(--color-red);
+}
+
+.homebg-slideshow-container {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+
+.homebg-slideshow-container::after {
+    content: "";
+    font-family: 'Nunito';
+    font-size: 2rem;
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image:
+        linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)),
+        linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.slides {
+    position: absolute;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    transition: opacity 1s ease-in-out, visibility 0s 1s;
+    object-fit: cover;
+}
+
+.slides.active {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 1s ease-in-out, visibility 0s;
+}
+
+.home-title {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    position: absolute;
+    top: 16%;
+    left: 5%;
+    max-width: 60%;
+}
+
+.home-title button {
+    font-family: 'Nunito';
+    height: 40px;
+    margin-top: 2rem;
+    width: 150px;
+    border: 2px solid var(--color-accent-bd);
+    background-color: transparent;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.5s ease;
+    color: var(--color-accent-bd);
+}
+
+.home-title button:hover {
+    background-color: var(--color-accent);
+    color: black;
+    box-shadow: 0 0 50px var(--color-accent);
 }
 
 /* Servers Carousel Styles */
@@ -82,11 +168,11 @@ nav ul li a.active {
 
 .server-card {
     display: flex;
-    background-color: #FFF;
+    background-color: white;
     border: 4px solid var(--minecraft-brown);
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .server-card-image {
@@ -132,13 +218,13 @@ nav ul li a.active {
 .server-ip input {
     flex-grow: 1;
     padding: 8px;
-    border: 2px solid var(--minecraft-brown);
+    border: 2px solid var(--color-brown);
     background-color: #F5DEB3;
 }
 
 .server-ip .copy-ip {
     padding: 8px 15px;
-    background-color: var(--minecraft-green);
+    background-color: var(--color-accent);
     color: white;
     border: none;
     cursor: pointer;
@@ -154,7 +240,7 @@ nav ul li a.active {
 }
 
 .carousel-controls button {
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
     border: none;
     padding: 10px;
@@ -305,4 +391,17 @@ nav ul li a.active {
 .carousel-next:disabled {
     opacity: 0.5;
     cursor: not-allowed;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    color: white;
+    font-size: 0.8rem;
+    gap: 1rem;
+    padding: 2rem 0 3rem 0;
+    background-color: var(--color-bg-main);
 }
