--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -1,24 +1,9 @@
-@media screen and (max-width: 768px) {
-    nav ul {
-        flex-direction: column;
-        align-items: center;
-    }
+@media(width < 700px) {
+  .home-title p {
+    font-size: 0.8rem;
+  }
 
-    nav ul li {
-        margin: 10px 0;
-    }
-
-    .wrapper {
-        padding: 10px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .wrapper h1 {
-        font-size: 1.5rem;
-    }
-
-    nav ul li {
-        font-size: 0.9rem;
-    }
+  .home-title button {
+    display: none;
+  }
 }
