--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -3,7 +3,23 @@
     font-size: 0.8rem;
   }
 
-  .home-title button {
+  nav ul li {
+    display: none;
+  }
+
+  nav ul {
+    justify-content: end;
+    /**urdl**/
+    padding: 1rem 1rem 0.7rem 0;
+  }
+}
+
+@media(width > 700px) {
+  nav ul button {
+    display: none;
+  }
+
+  .nav-icon-menu {
     display: none;
   }
 }
