--- a/styles/global.css
+++ b/styles/global.css
@@ -33,6 +33,7 @@
 body {
     font-family: 'Inter';
     min-width: 700px;
+    color: white;
 }
 
 .wrapper {
@@ -139,7 +140,7 @@ nav ul button {
     position: fixed;
     right: 0;
     bottom: 0;
-    width: 30%;
+    width: 200px;
     height: 100%;
     background-color: var(--color-bg-nav1);
     z-index: 999;
@@ -232,7 +233,7 @@ nav ul button {
 
 .about-container {
     color: white;
-    height: 70vh;
+    height: 100vh;
     gap: 1rem;
     width: 100vw;
     display: flex;
@@ -243,12 +244,20 @@ nav ul button {
     padding: 3rem;
 }
 
+#servers {
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+#servers>h1 {
+    padding: 1rem;
+}
+
 /* Servers Carousel Styles */
 .servers-carousel {
     position: relative;
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
 }
 
 .carousel-container {
@@ -258,11 +267,12 @@ nav ul button {
 
 .server-card {
     display: flex;
+    width: 100%;
     background-color: white;
     border: 4px solid var(--minecraft-brown);
-    border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin: 0 3rem;
 }
 
 .server-card-image {
@@ -271,7 +281,7 @@ nav ul button {
 
 .server-card-image img {
     width: 100%;
-    height: 250px;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -364,7 +374,6 @@ nav ul button {
 .member-avatar img {
     width: 180px;
     height: 180px;
-    border-radius: 50%;
     object-fit: cover;
     position: absolute;
     top: 10px;
@@ -377,7 +386,6 @@ nav ul button {
     width: 200px;
     height: 200px;
     border: 10px solid var(--minecraft-brown);
-    border-radius: 50%;
     top: 0;
     left: 0;
     z-index: 1;
@@ -483,6 +491,150 @@ nav ul button {
     cursor: not-allowed;
 }
 
+.mods-card-container {
+    position: relative;
+    width: 340px;
+    height: 260px;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.mods-card-container>img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+#mods {
+    background-color: white;
+}
+
+.mods-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: 0;
+    height: 60vh;
+    padding: 1rem;
+    gap: 1rem;
+    border: 1px solid black;
+}
+
+.mods-main-title {
+    text-align: center;
+    background-color: var(--color-red);
+    color: white;
+    padding: 2rem 0;
+}
+
+.mods-title {
+    position: absolute;
+    background-color: var(--color-bg-nav);
+    z-index: 999;
+    bottom: 0;
+    width: 100%;
+    height: 40%;
+    opacity: 0.9;
+    padding: 0.5rem;
+    cursor: pointer;
+    font-weight: bold;
+    transition: color 0.5ss ease;
+}
+
+.mods-title:hover {
+    color: orangered;
+}
+
+.mods-subtitle {
+    margin-top: 0.2rem;
+    font-weight: 500;
+    font-size: 0.7rem;
+}
+
+.contact__container {
+    height: auto;
+    display: flex;
+    justify-content: end;
+    padding: 2rem 0;
+    flex-direction: row;
+}
+
+.contact__title {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.contact__form {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    margin: 1rem;
+    padding: 2rem;
+    background-color: var(--color-bg-nav);
+    border-radius: 8px;
+    max-width: 90vw;
+    align-self: center;
+}
+
+.contact__form form {
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
+}
+
+.contact__form label {
+    font-size: 0.9rem;
+    margin: 0.4rem 0;
+}
+
+.contact__form input {
+    border-radius: 2px;
+    height: 30px;
+    background-color: var(--color-gray1);
+    border: transparent;
+    padding-left: 0.5rem;
+    color: var(--color-white);
+    font-size: 0.7rem;
+}
+
+.contact__form input:focus {
+    outline: 1px solid var(--color-blue);
+}
+
+.contact__form textarea {
+    border-radius: 2px;
+    height: 100px;
+    background-color: var(--color-gray1);
+    border: transparent;
+    padding: 0.5rem;
+    color: var(--color-white);
+    font-size: 0.7rem;
+    margin-bottom: 1rem;
+    font-family: "Inter";
+}
+
+.contact__form textarea:focus {
+    outline: 1px solid var(--color-blue);
+}
+
+.contact__form form div {
+    display: flex;
+    flex-direction: column;
+}
+
+.submit-btn {
+    background-color: var(--color-blue);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    max-width: 200px;
+    align-self: center;
+}
+
+
 footer {
     display: flex;
     flex-direction: column;
@@ -492,6 +644,6 @@ footer {
     color: white;
     font-size: 0.8rem;
     gap: 1rem;
-    padding: 1rem 0 3rem 0;
+    padding: 3rem 0 3rem 0;
     background-color: var(--color-bg-nav);
 }
