--- a/styles/global.css
+++ b/styles/global.css
@@ -247,15 +247,37 @@ nav ul button {
 
 .about-container {
     color: white;
-    height: 100vh;
     gap: 1rem;
+    height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--color-dbrown);
-    padding: 3rem;
+    background-color: black;
+    border: 2px solid purple;
+}
+
+.about-bg-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.about-bg-container img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    opacity: 0.2;
+}
+
+.about-content {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 0 5rem;
+    text-align: center;
 }
 
 #servers {
@@ -568,20 +590,6 @@ nav ul button {
     resize: vertical;
 }
 
-.submit-btn {
-    width: 100%;
-    padding: 10px;
-    background-color: var(--minecraft-green);
-    color: white;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.submit-btn:hover {
-    background-color: #186318;
-}
-
 .carousel-container {
     display: flex;
     overflow: hidden;
@@ -695,6 +703,7 @@ nav ul button {
     background-color: var(--color-bg-nav);
     max-width: 90vw;
     align-self: center;
+    border-radius: 4px;
 }
 
 .contact__form form {
@@ -744,13 +753,17 @@ nav ul button {
 .submit-btn {
     font-family: 'Nunito';
     font-weight: bold;
-    background-color: var(--color-accent);
+    background-color: var(--mc-stone-gray);
     color: var(--color-bg-nav);
-    border: 2px solid var(--color-accent-bd);
+    border: 2px solid var(--mc-text-primary);
     padding: 10px 20px;
     cursor: pointer;
     width: 160px;
     align-self: center;
+}
+
+.submit-btn:hover {
+    background-color: var(--color-red);
 }
 
 footer {
